[package]
name = "amora-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
chacha20poly1305 = "0.10"
generic-array = "0.14"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "amora"
harness = false
