[package]
name = "amora-rs"
version = "0.2.0"
edition = "2021"
description = "Amora is a secure token inspired by JWT and Branca, but enhanced a bit in some areas."
readme = "README.md"
repository = "https://codeberg.org/gblach/amora-rs"
license = "MPL-2.0"
keywords = ["authorization", "token", "jwt", "branca"]
categories = ["authentication", "cryptography"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
generic-array = "0.14"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "amora"
harness = false
