[package]
name = "amora-rs"
version = "0.2.1"
edition = "2024"
description = "Amora is a secure token inspired by JWT and Branca, but enhanced a bit in some areas."
readme = "README.md"
repository = "https://codeberg.org/gblach/amora-rs"
license = "MPL-2.0"
keywords = ["authorization", "token", "jwt", "branca"]
categories = ["authentication", "cryptography"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.11.0-rc.0"
rand = "0.9"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "amora"
harness = false
